--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-    <title>Grayback-Secure Soft Bounding Company</title>
+    <title>Grayback - Landing Preview </title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon-32x32.png">
 	<!-- Google Fonts Css-->
